package controller

import (
	"fmt"
	"log"
	pb "github.com/groovy-byte/agent-mesh-core/proto"
)

// SynthesisController implements the AdaptOrch Adaptive Synthesis Protocol
type SynthesisController struct{}

func NewSynthesisController() *SynthesisController {
	return &SynthesisController{}
}

// Synthesize merges parallel agent outputs into a single coherent state
func (s *SynthesisController) Synthesize(req *pb.SynthesisRequest) (*pb.SynthesisResponse, error) {
	log.Printf("[Synthesis] Merging outputs from %v for goal: %s", req.AgentIds, req.TargetGoal)

	// Heuristic Consistency Scoring (Simplified)
	// In a real implementation, this would use LLM-based verification
	synthesized := "Merged State: "
	for _, action := range req.ActionsToMerge {
		synthesized += fmt.Sprintf("[%s: %s] ", action.AgentId, action.ReasoningChain)
	}

	return &pb.SynthesisResponse{
		SynthesizedState: synthesized,
		ConfidenceScore:  0.88,
	}, nil
}
